--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <input type="text" id="search" placeholder="Search">
+    <p id="episodes-count"></p>
     <div id="root"></div>
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
