--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <select id="select"></select>
     <input type="text" id="search" placeholder="Search">
     <p id="episodes-count"></p>
     <div id="root"></div>
