--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <select id="movie-select"></select>
     <select id="select"></select>
     <input type="text" id="search" placeholder="Search">
     <p id="episodes-count"></p>
@@ -16,6 +17,7 @@
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
+    <script src="shows.js"></script>
 
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
