--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+    <input
+      type="text"
+      id="searchInput"
+      placeholder="Enter the name of episode..."
+    />
+    <div id="searchCount"></div>
     <div id="root" class="container"></div>
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="data/episodes.js"></script>
